Bug 423326 - Files view doesn't show the SVG icon of a .desktop file
Summary: Files view doesn't show the SVG icon of a .desktop file
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 20.04.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
: 425813 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-21 16:02 UTC by Patrick Silva
Modified: 2021-06-07 13:18 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.1
Sentry Crash Report:


Attachments
screenshot (638.68 KB, image/png)
2020-06-21 16:02 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-06-21 16:02:26 UTC
Created attachment 129566 [details]
screenshot

SUMMARY
This issue was previously mentioned in bug 394981 comment 18.

STEPS TO REPRODUCE
1. download biglyBT installer for linux
https://www.biglybt.com/download/
2. install biglyBT
3. add biglyBT shortcut to desktop
4. right-click on desktop, choose "Open with Dolphin"

OBSERVED RESULT
files view doesn't show the biglyBT icon, information panel does.
See the attached screenshot please.

EXPECTED RESULT
Files view should show the SVG icon of the .desktop file

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.19.1
KDE Frameworks Version: 5.71.0
Qt Version: 5.15.0

ADDITIONAL INFORMATION
Content of the .desktop file:

#!/usr/bin/env xdg-open
[Desktop Entry]
Name=BiglyBT
GenericName=BitTorrent Client
Exec=/home/stalker/biglybt/biglybt %U
Icon=/home/stalker/biglybt/biglybt.svg
Terminal=false
Type=Application
MimeType=x-scheme-handler/magnet;application/x-bittorrent;application/x-biglybt;x-scheme-handler/biglybt;
Categories=Application;Network;FileTransfer;P2P;GTK;Java;
StartupWMClass=BiglyBT
Comment 1 Alexander Lohnau 2020-06-22 17:04:21 UTC
Yep, seems like the same issue.
Comment 2 Bug Janitor Service 2020-06-22 17:34:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/26
Comment 3 Alexander Lohnau 2020-06-23 15:30:18 UTC
Git commit 37df39b93bf23b89ca760d4dd793788833d9a3e1 by Alexander Lohnau.
Committed on 23/06/2020 at 06:22.
Pushed by alex into branch 'release/20.04'.

Fix file preview for desktop files with absolute icon paths

M  +7    -1    src/kitemviews/kstandarditemlistwidget.cpp

https://invent.kde.org/system/dolphin/commit/37df39b93bf23b89ca760d4dd793788833d9a3e1
Comment 4 Patrick Silva 2020-08-05 22:43:16 UTC
This bug affects Dolphin 20.08 RC.

Operating System: Arch Linux
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0
Comment 5 Elvis Angelaccio 2020-08-18 23:30:20 UTC
@Alexander: can you have a look? Is it not fixed in 20.08?
Comment 6 Alexander Lohnau 2020-08-19 12:23:39 UTC
Huh, it works for me. Can you please make sure the file exists?
Comment 7 Patrick Silva 2020-08-20 11:26:09 UTC
yes, it exists. I can open the icon file indicated in "Icon=" line of the .desktop file with Gwenview.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2
Comment 8 Alexander Lohnau 2020-08-30 16:48:51 UTC
Git commit 004734e8321778a22a648e73b5d1743b64ca2bda by Alexander Lohnau.
Committed on 30/08/2020 at 16:46.
Pushed by alex into branch 'release/20.08'.

Fix file preview for desktop files with absolute icon paths
FIXED-IN: 20.08.1

M  +7    -1    src/kitemviews/kstandarditemlistwidget.cpp

https://invent.kde.org/system/dolphin/commit/004734e8321778a22a648e73b5d1743b64ca2bda
Comment 9 Alexander Lohnau 2020-08-30 16:56:36 UTC
Sorry, there went sth. wrong when merging. The change was included in 20.04, but not in the next release. It is all fixed now and will be shipped in 20.08.1 which gets tagged tomorrow.
Comment 10 Patrick Silva 2021-06-07 13:18:32 UTC
*** Bug 425813 has been marked as a duplicate of this bug. ***