Fix file preview for desktop files with absolute icon paths

BUG: 423326